--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "node": "~0.8"
   },
   "scripts": {
-    "start": "brunch watch --server"
+    "start": "brunch watch --server",
+    "postinstall": "brunch build --minify"
   },
   "dependencies": {
+    "statik": ">= 1.1.0", 
+    "brunch": ">= 1.0 < 1.5",
     "javascript-brunch": "> 1.0 < 1.3",
     "coffee-script-brunch": "> 1.0 < 1.3",
 
@@ -25,6 +28,7 @@
 
     "uglify-js-brunch": "> 1.0 < 1.3",
     "clean-css-brunch": "> 1.0 < 1.3"
+
   },
   "devDependencies": {
     "mocha": "0.14.0",
